Update local changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="ThinkSharp - A Focus Quiz for ADHD Awareness and Self-Help" />
   <title>ThinkSharp: ADHD Focus Quiz</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script>
