Update local changes

--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
     <!-- Results -->
     <div id="result-screen" class="hidden slide-in">
       <div id="xpLevel" class="text-base font-semibold text-center mb-2 text-gray-800 dark:text-gray-200"></div>
-      <div class="progress-bar-container w-full bg-gray-200 rounded-full mb-4 dark:bg-gray-700">
+      <div class="progress-bar-container w-full bg-gray-200 rounded-full mb-2 dark:bg-gray-700">
         <div id="xpProgress" class="progress-bar rounded-full"></div>
       </div>
-      <div id="score" class="text-xl font-bold text-center mb-4 text-gray-800 dark:text-gray-200"></div>
+      <div id="score" class="text-xl font-bold text-center mb-2 text-gray-800 dark:text-gray-200"></div>
+      <div id="taskProgressLabel" class="text-sm text-center mb-2 text-gray-600 dark:text-gray-400"></div>
+      <div class="progress-bar-container w-full bg-gray-200 rounded-full mb-4 dark:bg-gray-700">
+        <div id="taskProgress" class="progress-bar rounded-full"></div>
+      </div>
       <div id="tasks" class="task-list space-y-2"></div>
       <div class="flex space-x-2 mt-4">
         <button id="settings-btn" class="w-full py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition-colors text-sm" aria-label="Open settings">Settings</button>
